--- a/index.html
+++ b/index.html
@@ -145,6 +145,49 @@
         .empty-state.hidden {
             display: none;
         }
+
+        .task-content {
+    flex: 1;
+    margin: 0 15px;
+}
+
+.task-date {
+    display: block;
+    color: #888;
+    font-size: 0.8em;
+    margin-top: 5px;
+}
+
+.task-item.completed .task-date {
+    opacity: 0.7;
+}
+
+.clear-section {
+    text-align: center;
+    margin-top: 20px;
+    padding-top: 20px;
+    border-top: 1px solid #eee;
+}
+
+#clearCompleted {
+    background: #ff6b6b;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background 0.3s;
+}
+
+#clearCompleted:hover {
+    background: #ff5252;
+}
+
+#clearCompleted:disabled {
+    background: #ccc;
+    cursor: not-allowed;
+}
     </style>
 </head>
 <body>
