--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@
         </div>
 
         <ul id="taskList"></ul>
+
+        <div class="clear-section">
+            <button id="clearCompleted">Clear Completed Tasks</button>
+        </div>
     </div>
     
 <script>
