--- a/index.html
+++ b/index.html
@@ -1,10 +1,224 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple To-Do List</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+            padding: 40px 20px;
+        }
+
+        .container {
+            max-width: 500px;
+            margin: 0 auto;
+            background: white;
+            border-radius: 15px;
+            padding: 30px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+            margin-bottom: 30px;
+            font-size: 2.5em;
+        }
+
+        .input-section {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 30px;
+        }
+
+        #taskInput {
+            flex: 1;
+            padding: 15px;
+            border: 2px solid #ddd;
+            border-radius: 8px;
+            font-size: 16px;
+            transition: border-color 0.3s;
+        }
+
+        #taskInput:focus {
+            outline: none;
+            border-color: #667eea;
+        }
+
+        #addButton {
+            padding: 15px 25px;
+            background: #667eea;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background 0.3s;
+        }
+
+        #addButton:hover {
+            background: #5a6fd8;
+        }
+
+        #taskList {
+            list-style: none;
+        }
+
+        .task-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px;
+            margin-bottom: 10px;
+            background: #f8f9fa;
+            border-radius: 8px;
+            border-left: 4px solid #667eea;
+            animation: fadeIn 0.3s ease-in;
+        }
+
+        .task-item.completed {
+            opacity: 0.6;
+            border-left-color: #28a745;
+        }
+
+        .task-item.completed .task-text {
+            text-decoration: line-through;
+        }
+
+        .task-text {
+            flex: 1;
+            margin: 0 15px;
+        }
+
+        .task-actions {
+            display: flex;
+            gap: 10px;
+        }
+
+        .complete-btn, .delete-btn {
+            padding: 8px 12px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 14px;
+            transition: all 0.3s;
+        }
+
+        .complete-btn {
+            background: #28a745;
+            color: white;
+        }
+
+        .complete-btn:hover {
+            background: #218838;
+        }
+
+        .delete-btn {
+            background: #dc3545;
+            color: white;
+        }
+
+        .delete-btn:hover {
+            background: #c82333;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .empty-state {
+            text-align: center;
+            color: #6c757d;
+            padding: 40px 20px;
+        }
+
+        .empty-state.hidden {
+            display: none;
+        }
+
+        .task-content {
+            flex: 1;
+            margin: 0 15px;
+        }
+
+        .task-date {
+            display: block;
+            color: #888;
+            font-size: 0.8em;
+            margin-top: 5px;
+        }
+
+        .task-item.completed .task-date {
+            opacity: 0.7;
+        }
+
+        .clear-section {
+            text-align: center;
+            margin-top: 20px;
+            padding-top: 20px;
+            border-top: 1px solid #eee;
+        }
+
+        #clearAll {
+            background: #ff6b6b;
+            color: white;
+            border: none;
+            padding: 12px 24px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: all 0.3s;
+        }
+
+        #clearAll:hover {
+            background: #ff5252;
+            transform: translateY(-2px);
+        }
+
+        #clearAll:disabled {
+            background: #ccc;
+            cursor: not-allowed;
+            transform: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>My To-Do List</h1>
+        
+        <div class="input-section">
+            <input type="text" id="taskInput" placeholder="What needs to be done?">
+            <button id="addButton">Add Task</button>
+        </div>
+
+        <div id="emptyState" class="empty-state">
+            <p>No tasks yet. Add one above! 🎯</p>
+        </div>
+
+        <ul id="taskList"></ul>
+
+        <div class="clear-section">
+            <button id="clearAll">Clear All</button>
+        </div>
+    </div>
+    
 <script>
     // Get DOM elements
     const taskInput = document.getElementById('taskInput');
     const addButton = document.getElementById('addButton');
     const taskList = document.getElementById('taskList');
     const emptyState = document.getElementById('emptyState');
-    const clearAllButton = document.getElementById('clearAll'); // ADDED THIS LINE
+    const clearAllButton = document.getElementById('clearAll');
 
     // Initialize tasks from local storage
     let tasks = JSON.parse(localStorage.getItem('tasks')) || [];
@@ -110,7 +324,7 @@
     function updateEmptyState() {
         if (tasks.length === 0) {
             emptyState.classList.remove('hidden');
-            clearAllButton.disabled = true; // ADDED THIS LINE
+            clearAllButton.disabled = true;
         } else {
             emptyState.classList.add('hidden');
             clearAllButton.disabled = false;
@@ -147,3 +361,5 @@
         renderTasks();
     });
 </script>
+</body>
+</html>
